--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
+<!-- HTML document type declaration -->
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta charset="UTF-8" /> <!-- Set character encoding -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" /> <!-- Favicon -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- Responsive design -->
+    <title>Vite + React + TS</title> <!-- Page title -->
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root"></div> <!-- React mounts the app here -->
+    <script type="module" src="/src/main.tsx"></script> <!-- Main entry point for the app -->
   </body>
 </html>
